# aim-midterm

./: Dockerfile  README.md  app.py  disturbed_help.json  generated.csv  main.py  pyproject.toml  sdg.py  tasks.md
data/: kube.txt  unix-so.csv
